refactor(judge): 重构判题系统架构
- 将 SandboxExecuteRequest 和 JudgeResult 等数据对象从 sandbox 包移动到 dto 包
- 重构 JavaDockerAcmSandbox 类的执行流程，支持多文件编译
- 优化测试用例执行逻辑，提高错误处理能力
- 调整代码模板，支持 Java 解决方案类和 Main包装类分别生成